# libasync

./: LICENSE  library.makefile  meson.build  meson_options.txt
.github/workflows/: coverage.yml  docs.yml
benchmarks/: meson.build  mutex.cpp  oneshot.cpp
docs/: book.toml  meson.build  run_hotdoc  sitemap
docs/src/: SUMMARY.md  contributing.md  headers.md  index.md  io-service.md  low-level-data-structures.md  sender-receiver.md  wait-group.md  your-own-sender.md
docs/src/headers/: algorithm.md  basic.md  cancellation.md  execution.md  mutex.md  oneshot-event.md  post-ack.md  promise.md  queue.md  recurring-event.md  result.md  sequenced-event.md  wait-group.md
docs/src/headers/algorithm/: invocable.md  ite.md  lambda.md  let.md  race_and_cancel.md  repeat_while.md  sequence.md  transform.md  when_all.md
docs/src/headers/basic/: any_receiver.md  co_awaits_to.md  detached.md  operation.md  receives.md  run.md  sender.md  sender_awaiter.md  spawn.md  waitable.md
docs/src/headers/cancellation/: cancellation_callback.md  cancellation_event.md  suspend_indefinitely.md
docs/src/headers/mutex/: mutex.md  shared_mutex.md
docs/src/headers/post-ack/: post_ack_agent.md  post_ack_handle.md  post_ack_mechanism.md
docs/src/headers/promise/: future.md  promise.md
docs/src/headers/wait-group/: wait_in_group.md
include/async/: algorithm.hpp  barrier.hpp  basic.hpp  cancellation.hpp  doorbell.hpp  execution.hpp  generator.hpp  jump.hpp  mutex.hpp  oneshot-event.hpp  post-ack.hpp  promise.hpp  queue.hpp  recurring-event.hpp  result.hpp  sequenced-event.hpp  wait-group.hpp
tests/: algorithm.cpp  basic.cpp  generator.cpp  let.cpp  meson.build  mutex.cpp  oneshot.cpp  post-ack.cpp  promise.cpp  queue.cpp  race.cpp  sequenced.cpp  with_cancel_cb.cpp
